--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -70,7 +70,8 @@
     "productFound": "производ пронајден",
     "productsFound": "производи пронајдени",
     "tryAdjusting": "Обидете се да ја прилагодите вашата пребарување или филтер за да го пронајдете она што го барате.",
-    "clearAllFilters": "Избриши Ги Сите Филтри"
+    "clearAllFilters": "Избриши Ги Сите Филтри",
+    "browseAll": "Разгледај Ги Сите Производи"
   },
   "about": {
     "title": "За DoqiSHPK",
@@ -425,5 +426,79 @@
     "productsErrorLoading": "Грешка при вчитување на производи: {{error}}",
     "or": "или",
     "backToHome": "← Назад на Почетна"
+  },
+  "terms": {
+    "title": "Услови за Користење",
+    "subtitle": "Ве молиме внимателно прочитајте ги овие услови пред да ја користите нашата веб страница",
+    "lastUpdated": "Последно ажурирано: 1 декември 2025",
+    "introduction": "Добредојдовте во Doçi Sh.p.k. (\"ние\", \"наш\", \"нас\"). Со пристапувањето или користењето на нашата веб страница www.doqi-ks.com, се согласувате да се придржувате и да бидете обврзани со следниве Услови за Користење. Доколку не се согласувате со овие услови, ве молиме не ја користете нашата веб страница.",
+    "generalInfo": {
+      "title": "Општи Информации",
+      "content": "Веб страницата www.doqi-ks.com е во сопственост и управувана од Doçi Sh.p.k., компанија регистрирана во Косово.\nНашата веб страница обезбедува информации за нашите производи, услуги и активности на компанијата."
+    },
+    "useOfWebsite": {
+      "title": "Користење на Веб Страницата",
+      "content": "Оваа веб страница е наменета само за информативни цели.\nКорисниците можат да ги прегледуваат нашите производи и информации за компанијата, но не смеат да копираат, репродуцираат или дистрибуираат било каква содржина од оваа веб страница без писмено одобрение од Doçi Sh.p.k."
+    },
+    "intellectualProperty": {
+      "title": "Интелектуална Сопственост",
+      "content": "Сите текстови, графики, слики, дизајни на производи и други материјали на оваа веб страница се интелектуална сопственост на Doçi Sh.p.k. или неговите лиценцори.\nНе смеете да ги користите, копирате или репродуцирате овие материјали за комерцијални цели без претходна писмена согласност."
+    },
+    "accuracyOfInfo": {
+      "title": "Точност на Информациите",
+      "content": "Правиме разумни напори за да обезбедиме дека сите информации прикажани на нашата веб страница се точни и ажурни.\nСепак, Doçi Sh.p.k. не гарантира дека информациите се без грешки или пропусти и го задржува правото да ги ажурира или измени содржините во било кое време."
+    },
+    "linksToOtherSites": {
+      "title": "Линкови кон Други Веб Страници",
+      "content": "Нашата веб страница може да вклучува линкови кон надворешни страници.\nНие не сме одговорни за содржината, политиките или практиките на тие веб страници на трети страни."
+    },
+    "limitationOfLiability": {
+      "title": "Ограничување на Одговорноста",
+      "content": "Doçi Sh.p.k. нема да биде одговорен за било каква директна, индиректна, случајна или последична штета што произлегува од користењето или неможноста да се користи оваа веб страница."
+    },
+    "changesToTerms": {
+      "title": "Измени на Овие Услови",
+      "content": "Го задржуваме правото да ги изменуваме или заменуваме овие Услови за Користење во било кое време.\nАжурираната верзија ќе биде секогаш достапна на оваа страница со ревидиран датум."
+    },
+    "contact": {
+      "title": "Контакт",
+      "content": "За било какви прашања во врска со овие Услови, ве молиме контактирајте не на:\n📧 info@doqi-ks.com"
+    },
+    "questionsTitle": "Имате Прашања?",
+    "questionsText": "Доколку имате било какви прашања или недоумици во врска со нашите Услови за Користење, ние сме тука за да помогнеме."
+  },
+  "privacy": {
+    "title": "Политика на Приватност",
+    "subtitle": "Вашата приватност е важна за нас",
+    "lastUpdated": "Последно ажурирано: 1 декември 2025",
+    "introduction": "Во Doçi Sh.p.k., ја ценуваме вашата приватност и сме посветени на нејзината заштита. Оваа Политика на Приватност објаснува како ракуваме со информациите во врска со нашата веб страница www.doqi-ks.com.",
+    "infoWeCollect": {
+      "title": "Информации Што Ги Собираме",
+      "content": "Не собираме никакви лични податоци од посетителите на нашата веб страница.\nСтраницата се користи само за прикажување информации за нашите производи и услуги."
+    },
+    "cookiesAnalytics": {
+      "title": "Колачиња и Аналитика",
+      "content": "Нашата веб страница не користи колачиња, технологии за следење или аналитички алатки што собираат идентификувачки податоци за корисниците."
+    },
+    "linksToOtherSites": {
+      "title": "Линкови кон Други Страници",
+      "content": "Нашата веб страница може да содржи линкови кон други веб страници.\nНие не сме одговорни за практиките на приватност на тие надворешни страници."
+    },
+    "dataSecurity": {
+      "title": "Безбедност на Податоците",
+      "content": "Иако не собираме податоци, одржуваме технички заштитни мерки за да ја одржиме нашата веб страница безбедна и да спречиме неовластен пристап."
+    },
+    "changesToPolicy": {
+      "title": "Измени на Оваа Политика",
+      "content": "Можеме периодично да ја ажурираме оваа Политика на Приватност.\nСекоја измена ќе биде објавена на оваа страница со ажуриран датум."
+    },
+    "contact": {
+      "title": "Контактирајте Нè",
+      "content": "Доколку имате било какви прашања за оваа Политика на Приватност, ве молиме контактирајте не на:\n📧 info@doqi-ks.com"
+    },
+    "commitmentTitle": "Наша Посветеност на Приватноста",
+    "commitmentText": "Посветени сме на одржување на највисоките стандарди на приватност и транспарентност. Вашата доверба е важна за нас.",
+    "questionsTitle": "Прашања за Приватноста?",
+    "questionsText": "Доколку имате било какви прашања или недоумици за нашата Политика на Приватност, слободно контактирајте не."
   }
 }
