--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -70,7 +70,8 @@
     "productFound": "производ пронађен",
     "productsFound": "производа пронађено",
     "tryAdjusting": "Покушајте да прилагодите вашу претрагу или филтер да пронађете оно што тражите.",
-    "clearAllFilters": "Обриши Све Филтере"
+    "clearAllFilters": "Обриши све филтере",
+    "browseAll": "Прегледај све производе"
   },
   "about": {
     "title": "О DoqiSHPK",
@@ -425,5 +426,79 @@
     "productsErrorLoading": "Грешка при учитавању производа: {{error}}",
     "or": "или",
     "backToHome": "← Назад на Почетну"
+  },
+  "terms": {
+    "title": "Услови Коришћења",
+    "subtitle": "Молимо пажљиво прочитајте ове услове пре коришћења наше веб странице",
+    "lastUpdated": "Последњње ажурирано: 1. децембар 2025.",
+    "introduction": "Добродошли у Doçi Sh.p.k. (\"ми\", \"наш\", \"нас\"). Приступањем или коришћењем наше веб странице www.doqi-ks.com, слажете се са придржавањем и везаношћу следећим Условима Коришћења. Ако се не слажете са овим условима, молимо не користите нашу веб страницу.",
+    "generalInfo": {
+      "title": "Опште Информације",
+      "content": "Веб страницу www.doqi-ks.com поседује и управља Doçi Sh.p.k., компанија регистрована на Косову.\nНаша веб страница пружа информације о нашим производима, услугама и активностима компаније."
+    },
+    "useOfWebsite": {
+      "title": "Коришћење Веб Странице",
+      "content": "Ова веб страница је намењена само у информативне сврхе.\nКорисници могу прегледати наше производе и информације о компанији, али не смеју копирати, репродуковати или дистрибуирати било какав садржај са ове веб странице без писменог одобрења Doçi Sh.p.k."
+    },
+    "intellectualProperty": {
+      "title": "Интелектуална Својина",
+      "content": "Сав текст, графика, слике, дизајн производа и други материјали на овој веб страници су интелектуална својина Doçi Sh.p.k. или његових лиценцора.\nНе смете користити, копирати или репродуковати ове материјале у комерцијалне сврхе без претходне писмене сагласности."
+    },
+    "accuracyOfInfo": {
+      "title": "Тачност Информација",
+      "content": "Чинимо разумне напоре како бисмо осигурали да све информације приказане на нашој веб страници буду тачне и ажурне.\nМеђутим, Doçi Sh.p.k. не гарантује да информације не садрже грешке или пропусте и задржава право да ажурира или измени садржај у било ком тренутку."
+    },
+    "linksToOtherSites": {
+      "title": "Линкови ка Другим Веб Страницама",
+      "content": "Наша веб страница може укључивати линкове ка спољашњим страницама.\nНисмо одговорни за садржај, политике или праксе тих трећих страна."
+    },
+    "limitationOfLiability": {
+      "title": "Ограничење Одговорности",
+      "content": "Doçi Sh.p.k. неће бити одговоран за било какву директну, индиректну, случајну или последичну штету која произилази из коришћења или немогућности коришћења ове веб странице."
+    },
+    "changesToTerms": {
+      "title": "Измене Ових Услова",
+      "content": "Задржавамо право да изменимо или заменимо ове Услове Коришћења у било ком тренутку.\nАжурирана верзија ће увек бити доступна на овој страници са ревидираним датумом."
+    },
+    "contact": {
+      "title": "Контакт",
+      "content": "За сва питања у вези ових Услова, молимо контактирајте нас на:\n📧 info@doqi-ks.com"
+    },
+    "questionsTitle": "Имате Питања?",
+    "questionsText": "Ако имате било каква питања или недоумице у вези наших Услова Коришћења, ту смо да помогнемо."
+  },
+  "privacy": {
+    "title": "Политика Приватности",
+    "subtitle": "Ваша приватност нам је важна",
+    "lastUpdated": "Последњње ажурирано: 1. децембар 2025.",
+    "introduction": "У Doçi Sh.p.k., ценимо вашу приватност и посвећени смо њеној заштити. Ова Политика Приватности објашњава како рукујемо информацијама у вези са нашом веб страницом www.doqi-ks.com.",
+    "infoWeCollect": {
+      "title": "Информације Које Прикупљамо",
+      "content": "Не прикупљамо никакве личне податке од посетилаца наше веб странице.\nСтраница се користи искључиво за приказ информација о нашим производима и услугама."
+    },
+    "cookiesAnalytics": {
+      "title": "Колачићи и Аналитика",
+      "content": "Наша веб страница не користи колачиће, технологије праћења или аналитичке алате који прикупљају податке о кориснику који се могу идентификовати."
+    },
+    "linksToOtherSites": {
+      "title": "Линкови ка Другим Страницама",
+      "content": "Наша веб страница може садржавати линкове ка другим веб страницама.\nНисмо одговорни за праксе приватности тих спољашњих страница."
+    },
+    "dataSecurity": {
+      "title": "Сигурност Података",
+      "content": "Иако не прикупљамо податке, одржавамо техничке заштитне мере како бисмо одржали нашу веб страницу сигурном и спречили неовлашћени приступ."
+    },
+    "changesToPolicy": {
+      "title": "Измене Ове Политике",
+      "content": "Можемо периодично ажурирати ову Политику Приватности.\nСваке измене ће бити објављене на овој страници са ажурираним датумом."
+    },
+    "contact": {
+      "title": "Контактирајте Нас",
+      "content": "Ако имате било каква питања о овој Политици Приватности, молимо контактирајте нас на:\n📧 info@doqi-ks.com"
+    },
+    "commitmentTitle": "Наша Посвећеност Приватности",
+    "commitmentText": "Посвећени смо одржавању највиших стандарда приватности и транспарентности. Ваше поверење нам је важно.",
+    "questionsTitle": "Питања о Приватности?",
+    "questionsText": "Ако имате било каква питања или недоумице о нашој Политици Приватности, слободно нас контактирајте."
   }
 }
