--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -70,7 +70,8 @@
     "productFound": "proizvod pronađen",
     "productsFound": "proizvoda pronađeno",
     "tryAdjusting": "Pokušajte prilagoditi pretragu ili filter kako biste pronašli ono što tražite.",
-    "clearAllFilters": "Obriši Sve Filtere"
+    "clearAllFilters": "Obriši sve filtere",
+    "browseAll": "Pregledaj sve proizvode"
   },
   "about": {
     "title": "O DoqiSHPK",
@@ -419,5 +420,79 @@
     "productsErrorLoading": "Greška pri učitavanju proizvoda: {{error}}",
     "or": "ili",
     "backToHome": "← Nazad na Početnu"
+  },
+  "terms": {
+    "title": "Uslovi Korištenja",
+    "subtitle": "Molimo pažljivo pročitajte ove uslove prije korištenja naše web stranice",
+    "lastUpdated": "Posljednje ažurirano: 1. decembar 2025.",
+    "introduction": "Dobrodošli u Doçi Sh.p.k. (\"mi\", \"naš\", \"nas\"). Pristupanjem ili korištenjem naše web stranice www.doqi-ks.com, slažete se sa pridržavanjem i vezanošću sljedećim Uslovima Korištenja. Ako se ne slažete sa ovim uslovima, molimo ne koristite našu web stranicu.",
+    "generalInfo": {
+      "title": "Opće Informacije",
+      "content": "Web stranicu www.doqi-ks.com posjeduje i upravlja Doçi Sh.p.k., kompanija registrovana na Kosovu.\nNaša web stranica pruža informacije o našim proizvodima, uslugama i aktivnostima kompanije."
+    },
+    "useOfWebsite": {
+      "title": "Korištenje Web Stranice",
+      "content": "Ova web stranica je namijenjena samo u informativne svrhe.\nKorisnici mogu pregledati naše proizvode i informacije o kompaniji, ali ne smiju kopirati, reprodukovati ili distribuirati bilo kakav sadržaj sa ove web stranice bez pismenog odobrenja Doçi Sh.p.k."
+    },
+    "intellectualProperty": {
+      "title": "Intelektualna Svojina",
+      "content": "Sav tekst, grafika, slike, dizajn proizvoda i drugi materijali na ovoj web stranici su intelektualna svojina Doçi Sh.p.k. ili njegovih licencora.\nNe smijete koristiti, kopirati ili reprodukovati ove materijale u komercijalne svrhe bez prethodne pismene saglasnosti."
+    },
+    "accuracyOfInfo": {
+      "title": "Tačnost Informacija",
+      "content": "Činimo razumne napore kako bismo osigurali da sve informacije prikazane na našoj web stranici budu tačne i ažurne.\nMeđutim, Doçi Sh.p.k. ne garantuje da informacije ne sadrže greške ili propuste i zadržava pravo da ažurira ili izmijeni sadržaj u bilo kojem trenutku."
+    },
+    "linksToOtherSites": {
+      "title": "Linkovi ka Drugim Web Stranicama",
+      "content": "Naša web stranica može uključivati linkove ka vanjskim stranicama.\nNismo odgovorni za sadržaj, politike ili prakse tih trećih strana."
+    },
+    "limitationOfLiability": {
+      "title": "Ograničenje Odgovornosti",
+      "content": "Doçi Sh.p.k. neće biti odgovoran za bilo kakvu direktnu, indirektnu, slučajnu ili posljedičnu štetu koja proizilazi iz korištenja ili nemogućnosti korištenja ove web stranice."
+    },
+    "changesToTerms": {
+      "title": "Izmjene Ovih Uslova",
+      "content": "Zadržavamo pravo da izmijenimo ili zamijenimo ove Uslove Korištenja u bilo kojem trenutku.\nAžurirana verzija će uvijek biti dostupna na ovoj stranici sa revidiranim datumom."
+    },
+    "contact": {
+      "title": "Kontakt",
+      "content": "Za sva pitanja u vezi ovih Uslova, molimo kontaktirajte nas na:\n📧 info@doqi-ks.com"
+    },
+    "questionsTitle": "Imate Pitanja?",
+    "questionsText": "Ako imate bilo kakva pitanja ili nedoumice u vezi naših Uslova Korištenja, tu smo da pomognemo."
+  },
+  "privacy": {
+    "title": "Politika Privatnosti",
+    "subtitle": "Vaša privatnost nam je važna",
+    "lastUpdated": "Posljednje ažurirano: 1. decembar 2025.",
+    "introduction": "U Doçi Sh.p.k., cijenimo vašu privatnost i posvećeni smo njenoj zaštiti. Ova Politika Privatnosti objašnjava kako rukujemo informacijama u vezi sa našom web stranicom www.doqi-ks.com.",
+    "infoWeCollect": {
+      "title": "Informacije Koje Prikupljamo",
+      "content": "Ne prikupljamo nikakve lične podatke od posjetilaca naše web stranice.\nStranica se koristi isključivo za prikaz informacija o našim proizvodima i uslugama."
+    },
+    "cookiesAnalytics": {
+      "title": "Kolačići i Analitika",
+      "content": "Naša web stranica ne koristi kolačiće, tehnologije praćenja ili analitičke alate koji prikupljaju podatke o korisniku koji se mogu identificirati."
+    },
+    "linksToOtherSites": {
+      "title": "Linkovi ka Drugim Stranicama",
+      "content": "Naša web stranica može sadržavati linkove ka drugim web stranicama.\nNismo odgovorni za prakse privatnosti tih vanjskih stranica."
+    },
+    "dataSecurity": {
+      "title": "Sigurnost Podataka",
+      "content": "Iako ne prikupljamo podatke, održavamo tehničke zaštitne mjere kako bismo održali našu web stranicu sigurnom i spriječili neovlašteni pristup."
+    },
+    "changesToPolicy": {
+      "title": "Izmjene Ove Politike",
+      "content": "Možemo periodično ažurirati ovu Politiku Privatnosti.\nSvake izmjene će biti objavljene na ovoj stranici sa ažuriranim datumom."
+    },
+    "contact": {
+      "title": "Kontaktirajte Nas",
+      "content": "Ako imate bilo kakva pitanja o ovoj Politici Privatnosti, molimo kontaktirajte nas na:\n📧 info@doqi-ks.com"
+    },
+    "commitmentTitle": "Naša Posvećenost Privatnosti",
+    "commitmentText": "Posvećeni smo održavanju najviših standarda privatnosti i transparentnosti. Vaše povjerenje nam je važno.",
+    "questionsTitle": "Pitanja o Privatnosti?",
+    "questionsText": "Ako imate bilo kakva pitanja ili nedoumice o našoj Politici Privatnosti, slobodno nas kontaktirajte."
   }
 }
